# rusty

./: Cargo.toml  README.md
src/: app.rs  config.rs  main.rs  platform.rs
src/commands/: cli.rs  exec.rs  mod.rs  test.rs
src/commands/config/: cli.rs
src/commands/config/set/: cli.rs  mod.rs  repo.rs
