[package]
name = "rusty"
version = "0.1.0"
edition = "2021"
readme = "README.md"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.26", features = ["derive"] }
clap-verbosity-flag = "2.0.0"
clap_complete = "4.0.5"
confy = "0.5.1"
dunce = "1.0.3"
log = "0.4.17"
once_cell = "1.16.0"
owo-colors = { version = "3.5.0", features = ["supports-colors"] }
serde = { version = "1.0.147", features = ["derive"] }
